--- a/ru/toc.yaml
+++ b/ru/toc.yaml
@@ -1,6 +1,6 @@
 navigation:
   logo:
-    url: "../ru"
+    url: "https://finops360.ru"
     urlTitle: 'Вернуться на главную'
     dark:
       icon: 'https://app.finops360.ru/assets/logo-DT7qRV1a.svg'
