--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,5 +40,6 @@ jobs:
         with:
           revision: "${{ github.sha }}"
           storage-bucket: ${{ vars.DIPLODOC_STORAGE_BUCKET }}
+          storage-region: ${{ vars.DIPLODOC_STORAGE_REGION }}
           storage-access-key-id: ${{ secrets.DIPLODOC_ACCESS_KEY_ID }}
           storage-secret-access-key: ${{ secrets.DIPLODOC_SECRET_ACCESS_KEY }}
