--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         uses: diplodoc-platform/docs-build-action@v2
         with:
           revision: "${{ github.sha }}"
-          storage-endpoint: ${{ vars.DIPLODOC_STORAGE_ENDPOINT }}
+          server: ${{ vars.DIPLODOC_STORAGE_ENDPOINT }}
           storage-region: ${{ vars.DIPLODOC_STORAGE_REGION }}
           storage-bucket: ${{ vars.DIPLODOC_STORAGE_BUCKET }}
           storage-access-key-id: ${{ secrets.DIPLODOC_ACCESS_KEY_ID }}
@@ -41,6 +41,6 @@ jobs:
           revision: "${{ github.sha }}"
           storage-bucket: ${{ vars.DIPLODOC_STORAGE_BUCKET }}
           storage-region: ${{ vars.DIPLODOC_STORAGE_REGION }}
-          storage-endpoint: ${{ vars.DIPLODOC_STORAGE_ENDPOINT }}
+          server: ${{ vars.DIPLODOC_STORAGE_ENDPOINT }}
           storage-access-key-id: ${{ secrets.DIPLODOC_ACCESS_KEY_ID }}
           storage-secret-access-key: ${{ secrets.DIPLODOC_SECRET_ACCESS_KEY }}
