--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,9 +52,9 @@ jobs:
           rm -rf docs-html; yfm -i ./ -o ./docs-html
 
       - name: Release
+        working-directory: "./docs-html"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          cd docs-html
           aws --endpoint-url=${{ secrets.ENDPOINT_URL }} s3 sync . s3://${{ secrets.BUCKET_NAME }}
