--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install requriments
         working-directory: "/tmp"
         run: |
-          npm i @diplodoc/cli -g
+          npm i @diplodoc/cli@4.48.1 -g
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
           sudo ./aws/install --bin-dir /usr/local/bin --install-dir /usr/local/aws-cli --update
@@ -58,6 +58,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          echo $PWD
-          ls -lah
           aws --endpoint-url=${{ secrets.ENDPOINT_URL }} s3 sync . s3://${{ secrets.BUCKET_NAME }} --delete
